# maxon

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  Makefile  README.md  ROADMAP.md  Testy content  build.maxon  buildall.bat  codegen.cpp  codegen.h  create-test-fragment.ps1  fix-diasdk.ps1  lexer.cpp  lexer.h  library plan.md  main.cpp  make.ps1  mlir-ng.md  parser.cpp  parser.h  pch.cpp  pch.h  project_regalloc_progress.md  prompts.md  rust-issues.md  sample.maxon  scratch.txt  stdlib-implementation-plan.md  stdlib_arrays_plan.md  string-implementation-plan.md  swift-string-implementation-plan.md  temp  temp-string-test.maxon  (+3 more)
backend-tests/runner/: CMakeLists.txt  main.cpp
debugger-tests/: CMakeLists.txt  debugger_factory.cpp  debugger_interface.h  debugger_lldb.cpp  debugger_lldb.h  debugger_test.cpp  debugger_test.h  debugger_windows.cpp  debugger_windows.h  main.cpp
debugger-tests/test-programs/: function-calls.maxon  loop-iteration.maxon  nested-scopes.maxon  simple-variables.maxon
lsp-server/: .gitignore  CMakeLists.txt  finalize_maxon_lsp_server.cmake  rename_old_maxon_lsp_server.cmake
lsp-server/include/: analyzer.h  document_manager.h  formatter.h  json_rpc.h  lsp_server.h  lsp_types.h
lsp-server/src/: analyzer.cpp  document_manager.cpp  formatter.cpp  json_rpc.cpp  lsp_server.cpp  main.cpp
lsp-server/tests/: CMakeLists.txt  test_analyzer.cpp  test_code_actions.cpp  test_document_manager.cpp  test_formatter.cpp  test_helpers.h  test_hover.cpp  test_json_rpc.cpp  test_lsp_server.cpp  test_lsp_types.cpp  test_rename.cpp
maxon-bin/: CMakeLists.txt  Makefile  ast.h  build.zig  build_runner.cpp  build_runner.h  call_graph.cpp  call_graph.h  codegen.cpp  codegen.h  codegen_mir.cpp  codegen_mir.h  codegen_ng.cpp  codegen_ng.h  commands.cpp  commands.h  compiler.cpp  compiler.h  compiler_api.cpp  compiler_api.h  compiler_stats.h  const_eval.cpp  const_eval.h  docs_generator.cpp  docs_generator.h  error_formatter.cpp  error_formatter.h  file_utils.cpp  file_utils.h  grammar_generator.cpp  grammar_generator.h  incremental_parser.cpp  incremental_parser.h  intrinsics.cpp  intrinsics.h  intrinsics_defs.h  lexer.cpp  lexer.h  lexer_char_class.h  lexer_keyword_matcher.h  (+27 more)
maxon-bin/backend/: coff_lib_reader.cpp  coff_lib_reader.h  dwarf.cpp  dwarf.h  elf_writer.cpp  elf_writer.h  pe_writer.cpp  pe_writer.h  regalloc.cpp  regalloc.h  runtime_mir.h  x86_codegen.cpp  x86_codegen.h  x86_disassembler.cpp  x86_disassembler.h  x86_encoding.cpp  x86_encoding.h  x86_reg_alloc.cpp
maxon-bin/codegen/: codegen_debug.cpp  codegen_expr.cpp  codegen_function.cpp  codegen_output.cpp  codegen_profile.cpp  codegen_stdlib.cpp  codegen_stmt.cpp  codegen_types.cpp  codegen_types.h  codegen_utils.cpp
maxon-bin/codegen_mir/: codegen_mir_expr.cpp  codegen_mir_expr_array.cpp  codegen_mir_expr_map.cpp  codegen_mir_expr_string.cpp  codegen_mir_function.cpp  codegen_mir_intrinsics.cpp  codegen_mir_managed_array.cpp  codegen_mir_optional.cpp  codegen_mir_output.cpp  codegen_mir_safeffi.cpp  codegen_mir_stmt.cpp  codegen_mir_stmt_assign.cpp  codegen_mir_stmt_decl.cpp  codegen_mir_stmt_loop.cpp  intrinsic_codegen.cpp  intrinsic_codegen.h  managed_array_builder.cpp  managed_array_builder.h  managed_string_builder.cpp  managed_string_builder.h
maxon-bin/codegen_ng/: codegen_ng_expr.cpp  codegen_ng_function.cpp  codegen_ng_output.cpp  codegen_ng_stmt.cpp
maxon-bin/lexer/: lexer_char_class.h  lexer_keyword_matcher.h  lexer_number_parser.h  lexer_platform.h
maxon-bin/lsp/: document_manager.cpp  document_manager.h  json_rpc.cpp  json_rpc.h  lsp_json.cpp  lsp_json.h  lsp_server.cpp  lsp_server.h  lsp_types.h  transport.cpp  transport.h
maxon-bin/lsp/features/: code_actions.cpp  code_actions.h  (+26 more)
maxon-bin/mir/: dominance.cpp  memory_ssa.cpp  memory_ssa.h  mir.cpp  mir.h  mir_builder.cpp  mir_builder.h  mir_parser.cpp  mir_parser.h  opt_algebraic_simplification.cpp  opt_constant_folding.cpp  opt_constant_propagation.cpp  opt_copy_propagation.cpp  opt_dead_code_elim.cpp  opt_function_inlining.cpp  opt_integer_division.cpp  opt_mem2reg.cpp  opt_phi_elimination.cpp  opt_redundant_load_store.cpp  opt_strength_reduction.cpp  opt_unreachable_block_elim.cpp  optimizer.cpp  optimizer.h  optimizer_utils.cpp  ssa_verifier.cpp  ssa_verifier.h
maxon-bin/parser/: parser_decl.cpp  parser_expr.cpp  parser_stmt.cpp  parser_utils.cpp
maxon-bin/semantic_analyzer/: semantic_analyzer_cache.cpp  semantic_analyzer_expr.cpp  semantic_analyzer_mutation.cpp  semantic_analyzer_stmt.cpp
maxon-bin/simd/: simd.h  simd_char_class.h  simd_keyword_matcher.h  simd_lexer.cpp  simd_lexer.h  simd_number_parser.h  simd_parser_support.h  simd_platform.h  simd_token_stream.h
maxon-bin/specs/: abs.md  alloc-tracking.md  arithmetic-operators.md  arithmetic.md  array-managed-elements.md  arrays.md  associated-types.md  bitwise-operators.md  bool-type.md  break.md  byte-type.md  ceil.md  challenge-array-deep-copy.md  challenge-array-of-structs.md  challenge-nested-structs.md  challenge-sized-arrays.md  challenge-struct-field-assign.md  challenge-struct-lifetime.md  challenge-struct-ownership.md  character-type.md  collection.md  command-line-args.md  comparison-operators.md  contextual-literal-typing.md  cos.md  dead-code-elimination.md  default-interface-implementations.md  directory.md  duplicate-block-identifiers.md  enums.md  error-handling.md  exp.md  export-keyword.md  export-var-fields.md  expressions.md  file-io.md  first-class-functions.md  float-type.md  floor.md  function-declaration.md  (+61 more)
maxon-bin/src/: grammar_generator.zig  main.zig
maxon-bin/temp/: fceil_func.txt
maxon-bin/tests/: CMakeLists.txt  test_build.cpp  test_codegen_mir.cpp  test_dwarf.cpp  test_end_to_end.cpp  test_executable_writers.cpp  test_large_struct_return.cpp  test_mir.cpp  test_mir_parser.cpp  test_optimizer.cpp  test_regalloc.cpp  test_runtime.cpp  test_x86_codegen.cpp  test_x86_encoding.cpp
maxon-bin/types/: type_conversion.cpp  type_conversion.h
(+16995 files in other folders)
